<?xml version="1.0"?>
<package>
  <name>rqt_launch_analyzer</name>
  <version>0.0.0</version>
  <description>rqt plugin for analyzing launch files.</description>

  <maintainer email="alexander.buchegger@gmail.com">Alexander Buchegger</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/rqt_launch_analyzer</url> -->

  <author email="alexander.buchegger@gmail.com">Alexander Buchegger</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
